game reset and word-selector working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,9 @@ footer {
 .col-md-6 {
     border: 1px dotted darkblue;
 }
+.col-md-3 {
+    border: 1px dotted darkred;
+}
 #currentWord {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
